# Albany

./: .gitignore  .travis.yml  ALBANY_MASTER_BRANCH  CMakeLists.txt  CODEOWNERS  CTestConfig.cmake  CTestCustom.cmake  README  README.md  albany_FC_Kokkos.patch  chrysalis_gnu_modules.sh  chrysalis_intel_modules.sh  do-cmake-albany-chr-gnu  do-cmake-albany-chr-intel  do-cmake-albany-pmcpu-gnu  do-cmake-chr-albany-gnu  index.html  license.txt  params.json  pmcpu_gnu_modules.sh
PyAlbany/: CMakeLists.txt  README.md
PyAlbany/PyAlbany/: Utils.py
PyAlbany/python/: Distributions.py  ExtremeEvent.py  FEM_postprocess.py  RandomizedCompression.py  Utils.py  __init__.py
PyAlbany/src/: Albany_Interface.cpp  Albany_Interface.hpp  Albany_PyAlbanyTypes.hpp  Albany_PyUtils.cpp  Albany_PyUtils.hpp  Albany_Pybind11.cpp  Albany_Pybind11_Comm.cpp  Albany_Pybind11_Comm.hpp  Albany_Pybind11_Include.hpp  Albany_Pybind11_ParallelEnv.cpp  Albany_Pybind11_ParallelEnv.hpp  Albany_Pybind11_ParameterList.cpp  Albany_Pybind11_ParameterList.hpp  Albany_Pybind11_Timer.cpp  Albany_Pybind11_Timer.hpp  Albany_Pybind11_Tpetra.cpp  Albany_Pybind11_Tpetra.hpp  CMakeLists.txt  PyAlbany_Stokhos.cpp  PyAlbany_Stokhos.hpp
PyAlbany/swig/: CMakeLists.txt  albany.i
PyAlbany/tests/: CMakeLists.txt
examples/: CMakeLists.txt
examples/AERAS/: CMakeLists.txt
examples/AMP/: CMakeLists.txt
examples/ANISO/: CMakeLists.txt
examples/ATO/: CMakeLists.txt
examples/AdvDiff/: inputT.xml
examples/Aeras/: CMakeLists.txt
examples/BoreDemo/: CMakeLists.txt  input.xml
examples/CTM/: input.xml
examples/CUTR_Heat1D/: CMakeLists.txt  input.xml  unitLine.param0.jou  unitLine.param1.jou
examples/CUTR_Heat2D/: CMakeLists.txt  dakota.in  input.xml  quad.geom.jou  quad.mesh.jou
examples/CUTR_HeatStruct2D/: CMakeLists.txt  dakota.in  dakota_nls.data  input.xml  quad.mesh.jou
examples/CahnHillElast2D/: CMakeLists.txt  domain.exo  domain.jou  domain_fine.jou  input.xml  inputT.xml  inputT_tempus.xml
examples/CapModelPlasticity3D/: input.xml  inputT.xml
examples/Catalyst/: input.xml
examples/ComprNS/: CMakeLists.txt  input2D_cavity.xml  input2D_taylorGreenVortex.xml
examples/ConcurrentMultiscale/: runtest.py
examples/ContinuationHeat1D/: CMakeLists.txt  input.xml  inputT.xml
examples/CoupledReactor/: CMakeLists.txt  input_domain_coupled.xml  input_domain_coupled_sg.xml  input_heat.xml  input_heat_sg.xml  input_network_coupled.xml  input_network_coupled_sg.xml  input_neutronics_sg.xml
examples/CoupledReactor2D/: input_heat_sg.xml  input_network_coupled_sg.xml  ni.out
examples/DiffusionDeformation3D/: input.xml
examples/DomainTear2D/: CMakeLists.txt  inputBase.xml  inputCR.xml  inputTM.xml  rip.exo  rip.jou
examples/Dynamics/: dynamics.xml
examples/ElastMeshAdapt3D/: CMakeLists.txt  input.xml  inputAdapt.xml  inputElastAdapt.xml  inputMeshModel.xml  inputMmodel.xml  inputSerial.xml  materials.xml  necking-64rgn-fmdb.sms  pvdwritten.cmake
examples/Elasticity2DTraction/: CMakeLists.txt  TestNcdumpValues.C  hole.exo.4.0  hole.exo.4.1  input.xml  inputT.xml  runtest.cmake
examples/Elasticity2DTriangles/: input.xml  inputT.xml
examples/Elasticity3DPressureBC/: CMakeLists.txt  cyl.exo  input.xml  inputTransient.xml
examples/ErrorBasedAdapt3D/: CMakeLists.txt  bar_with_hole.xmt_txt  coarse_bar_with_hole_FMDB.sms  input-elasticity.xml  input-plasticity.xml  inputCoarseML.xml  inputElastML.xml  materials-plasticity.xml  very_coarse_FMDB.sms
examples/FELIX/: CMakeLists.txt
examples/FELIX_Stokes/: CMakeLists.txt  CMakeLists.txt.orig  dome_cyl.exo  dome_cyl.exo.4.0  dome_cyl.exo.4.1  dome_cyl.exo.4.2  dome_cyl.exo.4.3  dome_cyl.jou  icouette_periodic.xml  input.xml  input_dome.xml  input_fo.xml  input_fo_circularShelf.xml  input_fo_confinedShelf.xml  input_fo_cosexp_basal.xml  input_fo_cosexp_basal_all.xml  input_fo_cosexp_basal_all_glensLaw.xml  input_fo_cosexp_basal_flip.xml  input_fo_dome.xml  input_fo_domeAnalysis.xml  input_fo_dome_interpSurf.xml  input_fo_ismip-hom_testA.xml  input_fo_ismip-hom_testB.xml  input_fo_ismip-hom_testC.xml  input_fo_ismip-hom_testD.xml  input_fo_sincos2D.xml  input_fo_sincosz.xml  input_fo_sinexp_neumann.xml  input_ismip-hom_testA.xml  input_poisson2D.xml  input_poisson3D.xml  input_sacado.xml  input_sincos_glen.xml  input_sincosz.xml  input_sincosz_dirichlet.xml  input_sinsin.xml  input_sinsin_dirichlet.xml  ns.exo.4.0  ns.exo.4.1  ns.exo.4.2  (+2 more)
examples/GOAL/: CMakeLists.txt
examples/GPAM/: CMakeLists.txt  input.xml
examples/GradientDamage/: CMakeLists.txt  input.xml  inputT.xml
examples/GursonFD3D/: CMakeLists.txt  input.xml
examples/HTE3D/: CMakeLists.txt  h3d.geom.jou  h3d.mesh.jou  h3d.param0.jou  h3d.param1.jou  input.xml
examples/Heat1DPeriodic/: CMakeLists.txt  input.xml  inputBelos.xml  inputT.xml
examples/Heat1DWithSource/: CMakeLists.txt  (+4 more)
pyAlbany/: CMakeLists.txt  README.md  requirements.txt
src/: AlbanyConfig.cmake.in  Albany_Adaptation.cpp  Albany_Adaptation.hpp  Albany_Application.cpp  Albany_Application.hpp  Albany_Application_CU.cu  Albany_CommTypes.hpp  Albany_Dakota.cpp  Albany_Dakota.hpp  Albany_DakotaT.cpp  Albany_DakotaT.hpp  Albany_DataTypes.hpp  Albany_DistributedParameter.cpp  Albany_DistributedParameter.hpp  Albany_DistributedParameterDerivativeOp.hpp  Albany_DistributedParameterDerivativeOpT.hpp  Albany_DistributedParameterLibrary.hpp  Albany_DistributedParameterLibrary_Epetra.hpp  Albany_DistributedParameterLibrary_Thyra.hpp  Albany_DistributedParameterLibrary_Tpetra.hpp  Albany_DistributedParameterResponseDerivativeOp.hpp  Albany_DualDynRankView.hpp  Albany_DualView.hpp  Albany_DummyParameterAccessor.hpp  Albany_EigendataInfoStruct.hpp  Albany_EigendataInfoStructT.hpp  Albany_ExodusOutput.cpp  Albany_ExodusOutput.hpp  Albany_GitVersion.h.in  Albany_KokkosTypes.hpp  Albany_Macros.hpp  Albany_Memory.cpp  Albany_Memory.hpp  Albany_ModelEvaluator.cpp  Albany_ModelEvaluator.hpp  Albany_ModelEvaluatorT.cpp  Albany_ModelEvaluatorT.hpp  Albany_ModelFactory.cpp  Albany_ModelFactory.hpp  Albany_NOXObserver.cpp  (+104 more)
tests/: CMakeLists.txt
(+23322 files in other folders)
